// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validate validateFixtureAgainstAST() fragments includes fields from inline fragments 1`] = `
Object {
  "fixturePath": "PersonQuery/fixture.json",
  "operationName": "PersonQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "person",
      "message": "should be non-null but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() fragments includes fields from inline fragments 2`] = `
Object {
  "fixturePath": "PersonQuery/fixture.json",
  "operationName": "PersonQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "person",
      "message": "should be non-null but was null",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() fragments includes fields from inline fragments 3`] = `
Object {
  "fixturePath": "PersonQuery/fixture.json",
  "operationName": "PersonQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "person.name",
      "message": "should be non-null but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() fragments includes fields from inline fragments 4`] = `
Object {
  "fixturePath": "PersonQuery/fixture.json",
  "operationName": "PersonQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "person.name",
      "message": "should be a string but was a boolean",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() fragments includes fields from inline fragments 5`] = `
Object {
  "fixturePath": "PersonQuery/fixture.json",
  "operationName": "PersonQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [],
}
`;

exports[`validate validateFixtureAgainstAST() fragments includes fields from inline fragments 6`] = `
Object {
  "fixturePath": "PersonQuery/fixture.json",
  "operationName": "PersonQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "person",
      "message": "has key 'age' not present in the query",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() fragments includes fields from separate fragments 1`] = `
Object {
  "fixturePath": "PersonQuery/fixture.json",
  "operationName": "PersonQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "person",
      "message": "should be non-null but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() fragments includes fields from separate fragments 2`] = `
Object {
  "fixturePath": "PersonQuery/fixture.json",
  "operationName": "PersonQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "person",
      "message": "should be non-null but was null",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() fragments includes fields from separate fragments 3`] = `
Object {
  "fixturePath": "PersonQuery/fixture.json",
  "operationName": "PersonQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "person.name",
      "message": "should be non-null but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() fragments includes fields from separate fragments 4`] = `
Object {
  "fixturePath": "PersonQuery/fixture.json",
  "operationName": "PersonQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "person.name",
      "message": "should be a string but was a boolean",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() fragments includes fields from separate fragments 5`] = `
Object {
  "fixturePath": "PersonQuery/fixture.json",
  "operationName": "PersonQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [],
}
`;

exports[`validate validateFixtureAgainstAST() fragments includes fields from separate fragments 6`] = `
Object {
  "fixturePath": "PersonQuery/fixture.json",
  "operationName": "PersonQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "person",
      "message": "has key 'age' not present in the query",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() fragments treats fields on interface type spreads to be nullable 1`] = `
Object {
  "fixturePath": "DogQuery/fixture.json",
  "operationName": "DogQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "animals",
      "message": "should be non-null but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() fragments treats fields on interface type spreads to be nullable 2`] = `
Object {
  "fixturePath": "DogQuery/fixture.json",
  "operationName": "DogQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "animals",
      "message": "should be non-null but was null",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() fragments treats fields on interface type spreads to be nullable 3`] = `
Object {
  "fixturePath": "DogQuery/fixture.json",
  "operationName": "DogQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [],
}
`;

exports[`validate validateFixtureAgainstAST() fragments treats fields on interface type spreads to be nullable 4`] = `
Object {
  "fixturePath": "DogQuery/fixture.json",
  "operationName": "DogQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "animals[0].name",
      "message": "should be non-null but was undefined",
    },
    Object {
      "keyPath": "animals[0].barks",
      "message": "should be a boolean (or null), but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() fragments treats fields on interface type spreads to be nullable 5`] = `
Object {
  "fixturePath": "DogQuery/fixture.json",
  "operationName": "DogQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "animals[0].barks",
      "message": "should be a boolean (or null), but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() fragments treats fields on interface type spreads to be nullable 6`] = `
Object {
  "fixturePath": "DogQuery/fixture.json",
  "operationName": "DogQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "animals[0].barks",
      "message": "should be a boolean but was a number",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() fragments treats fields on interface type spreads to be nullable 7`] = `
Object {
  "fixturePath": "DogQuery/fixture.json",
  "operationName": "DogQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [],
}
`;

exports[`validate validateFixtureAgainstAST() lists validates nested arrays 1`] = `
Object {
  "fixturePath": "SetsQuery/fixture.json",
  "operationName": "SetsQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "sets",
      "message": "should be an array (or null), but was a undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() lists validates nested arrays 2`] = `
Object {
  "fixturePath": "SetsQuery/fixture.json",
  "operationName": "SetsQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [],
}
`;

exports[`validate validateFixtureAgainstAST() lists validates nested arrays 3`] = `
Object {
  "fixturePath": "SetsQuery/fixture.json",
  "operationName": "SetsQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [],
}
`;

exports[`validate validateFixtureAgainstAST() lists validates nested arrays 4`] = `
Object {
  "fixturePath": "SetsQuery/fixture.json",
  "operationName": "SetsQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "sets[0]",
      "message": "should be an array (or null), but was a number",
    },
    Object {
      "keyPath": "sets[1]",
      "message": "should be an array (or null), but was a number",
    },
    Object {
      "keyPath": "sets[2]",
      "message": "should be an array (or null), but was a number",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() lists validates nested arrays 5`] = `
Object {
  "fixturePath": "SetsQuery/fixture.json",
  "operationName": "SetsQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "sets[0][2]",
      "message": "should be non-null but was null",
    },
    Object {
      "keyPath": "sets[1][0]",
      "message": "should be an integer but was a boolean",
    },
    Object {
      "keyPath": "sets[1][1]",
      "message": "should be an integer but was a object",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() lists validates nested arrays 6`] = `
Object {
  "fixturePath": "SetsQuery/fixture.json",
  "operationName": "SetsQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "sets[0]",
      "message": "should be non-null but was null",
    },
    Object {
      "keyPath": "sets[2]",
      "message": "should be an array (or null), but was a boolean",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() lists validates objects nested in arrays 1`] = `
Object {
  "fixturePath": "PeopleQuery/fixture.json",
  "operationName": "PeopleQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "people",
      "message": "should be non-null but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() lists validates objects nested in arrays 2`] = `
Object {
  "fixturePath": "PeopleQuery/fixture.json",
  "operationName": "PeopleQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "people",
      "message": "should be non-null but was null",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() lists validates objects nested in arrays 3`] = `
Object {
  "fixturePath": "PeopleQuery/fixture.json",
  "operationName": "PeopleQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [],
}
`;

exports[`validate validateFixtureAgainstAST() lists validates objects nested in arrays 4`] = `
Object {
  "fixturePath": "PeopleQuery/fixture.json",
  "operationName": "PeopleQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "people[0]",
      "message": "should be an object but was a number",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() lists validates objects nested in arrays 5`] = `
Object {
  "fixturePath": "PeopleQuery/fixture.json",
  "operationName": "PeopleQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "people[0].name",
      "message": "should be non-null but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() lists validates objects nested in arrays 6`] = `
Object {
  "fixturePath": "PeopleQuery/fixture.json",
  "operationName": "PeopleQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "people[0].name",
      "message": "should be a string but was a boolean",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() lists validates objects nested in arrays 7`] = `
Object {
  "fixturePath": "PeopleQuery/fixture.json",
  "operationName": "PeopleQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [],
}
`;

exports[`validate validateFixtureAgainstAST() lists validates objects nested in arrays 8`] = `
Object {
  "fixturePath": "PeopleQuery/fixture.json",
  "operationName": "PeopleQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "people[0]",
      "message": "has key 'age' not present in the query",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() lists validates the types of lists 1`] = `
Object {
  "fixturePath": "FavoriteNumbersQuery/fixture.json",
  "operationName": "FavoriteNumbersQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "favoriteNumbers",
      "message": "should be non-null but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() lists validates the types of lists 2`] = `
Object {
  "fixturePath": "FavoriteNumbersQuery/fixture.json",
  "operationName": "FavoriteNumbersQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "favoriteNumbers",
      "message": "should be non-null but was null",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() lists validates the types of lists 3`] = `
Object {
  "fixturePath": "FavoriteNumbersQuery/fixture.json",
  "operationName": "FavoriteNumbersQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [],
}
`;

exports[`validate validateFixtureAgainstAST() lists validates the types of lists 4`] = `
Object {
  "fixturePath": "FavoriteNumbersQuery/fixture.json",
  "operationName": "FavoriteNumbersQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "favoriteNumbers",
      "message": "should be an array (or null), but was an object",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() lists validates the types of lists 5`] = `
Object {
  "fixturePath": "FavoriteNumbersQuery/fixture.json",
  "operationName": "FavoriteNumbersQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "favoriteNumbers[1]",
      "message": "should be an integer but was a float",
    },
    Object {
      "keyPath": "favoriteNumbers[2]",
      "message": "should be non-null but was null",
    },
    Object {
      "keyPath": "favoriteNumbers[3]",
      "message": "should be an integer but was a boolean",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() objects creates errors for keys not present in the query 1`] = `
Object {
  "fixturePath": "PersonQuery/fixture.json",
  "operationName": "PersonQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "person",
      "message": "has key 'age' not present in the query",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() objects creates errors for keys not present in the query 2`] = `
Object {
  "fixturePath": "PersonQuery/fixture.json",
  "operationName": "PersonQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "person",
      "message": "has key 'foo' not present in the query",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() objects validates aliases 1`] = `
Object {
  "fixturePath": "PersonQuery/fixture.json",
  "operationName": "PersonQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "person",
      "message": "should be non-null but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() objects validates aliases 2`] = `
Object {
  "fixturePath": "PersonQuery/fixture.json",
  "operationName": "PersonQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "person",
      "message": "should be non-null but was null",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() objects validates aliases 3`] = `
Object {
  "fixturePath": "PersonQuery/fixture.json",
  "operationName": "PersonQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "person.nom",
      "message": "should be non-null but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() objects validates aliases 4`] = `
Object {
  "fixturePath": "PersonQuery/fixture.json",
  "operationName": "PersonQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "person.nom",
      "message": "should be a string but was a boolean",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() objects validates aliases 5`] = `
Object {
  "fixturePath": "PersonQuery/fixture.json",
  "operationName": "PersonQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [],
}
`;

exports[`validate validateFixtureAgainstAST() objects validates aliases 6`] = `
Object {
  "fixturePath": "PersonQuery/fixture.json",
  "operationName": "PersonQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "chris",
      "message": "should be non-null but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() objects validates aliases 7`] = `
Object {
  "fixturePath": "PersonQuery/fixture.json",
  "operationName": "PersonQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "chris",
      "message": "should be non-null but was null",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() objects validates aliases 8`] = `
Object {
  "fixturePath": "PersonQuery/fixture.json",
  "operationName": "PersonQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "chris.nom",
      "message": "should be non-null but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() objects validates aliases 9`] = `
Object {
  "fixturePath": "PersonQuery/fixture.json",
  "operationName": "PersonQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "chris.nom",
      "message": "should be a string but was a boolean",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() objects validates aliases 10`] = `
Object {
  "fixturePath": "PersonQuery/fixture.json",
  "operationName": "PersonQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [],
}
`;

exports[`validate validateFixtureAgainstAST() objects validates nested nullable objects 1`] = `
Object {
  "fixturePath": "AddressQuery/fixture.json",
  "operationName": "AddressQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [],
}
`;

exports[`validate validateFixtureAgainstAST() objects validates nested nullable objects 2`] = `
Object {
  "fixturePath": "AddressQuery/fixture.json",
  "operationName": "AddressQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "person.address.number",
      "message": "should be an integer (or null), but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() objects validates nested nullable objects 3`] = `
Object {
  "fixturePath": "AddressQuery/fixture.json",
  "operationName": "AddressQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "person.address.number",
      "message": "should be an integer but was a string",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() objects validates nested nullable objects 4`] = `
Object {
  "fixturePath": "AddressQuery/fixture.json",
  "operationName": "AddressQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "person.address.number",
      "message": "should be an integer but was a float",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() objects validates nested nullable objects 5`] = `
Object {
  "fixturePath": "AddressQuery/fixture.json",
  "operationName": "AddressQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [],
}
`;

exports[`validate validateFixtureAgainstAST() objects validates nested nullable objects 6`] = `
Object {
  "fixturePath": "AddressQuery/fixture.json",
  "operationName": "AddressQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "person.address",
      "message": "has key 'street' not present in the query",
    },
    Object {
      "keyPath": "person.address.number",
      "message": "should be an integer (or null), but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() objects validates nested objects 1`] = `
Object {
  "fixturePath": "AddressQuery/fixture.json",
  "operationName": "AddressQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "person",
      "message": "should be non-null but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() objects validates nested objects 2`] = `
Object {
  "fixturePath": "AddressQuery/fixture.json",
  "operationName": "AddressQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "person",
      "message": "should be non-null but was null",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() objects validates nested objects 3`] = `
Object {
  "fixturePath": "AddressQuery/fixture.json",
  "operationName": "AddressQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "person.address",
      "message": "should be non-null but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() objects validates nested objects 4`] = `
Object {
  "fixturePath": "AddressQuery/fixture.json",
  "operationName": "AddressQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "person.address",
      "message": "should be non-null but was null",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() objects validates nested objects 5`] = `
Object {
  "fixturePath": "AddressQuery/fixture.json",
  "operationName": "AddressQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "person.address.number",
      "message": "should be an integer (or null), but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() objects validates nested objects 6`] = `
Object {
  "fixturePath": "AddressQuery/fixture.json",
  "operationName": "AddressQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "person.address.number",
      "message": "should be an integer but was a string",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() objects validates nested objects 7`] = `
Object {
  "fixturePath": "AddressQuery/fixture.json",
  "operationName": "AddressQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "person.address.number",
      "message": "should be an integer but was a float",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() objects validates nested objects 8`] = `
Object {
  "fixturePath": "AddressQuery/fixture.json",
  "operationName": "AddressQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [],
}
`;

exports[`validate validateFixtureAgainstAST() objects validates nested objects 9`] = `
Object {
  "fixturePath": "AddressQuery/fixture.json",
  "operationName": "AddressQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "person.address",
      "message": "has key 'street' not present in the query",
    },
    Object {
      "keyPath": "person.address.number",
      "message": "should be an integer (or null), but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() objects validates that the value is actually an object 1`] = `
Object {
  "fixturePath": "PersonQuery/fixture.json",
  "operationName": "PersonQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "person",
      "message": "should be non-null but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() objects validates that the value is actually an object 2`] = `
Object {
  "fixturePath": "PersonQuery/fixture.json",
  "operationName": "PersonQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "person",
      "message": "should be non-null but was null",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() objects validates that the value is actually an object 3`] = `
Object {
  "fixturePath": "PersonQuery/fixture.json",
  "operationName": "PersonQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "person.name",
      "message": "should be non-null but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() objects validates that the value is actually an object 4`] = `
Object {
  "fixturePath": "PersonQuery/fixture.json",
  "operationName": "PersonQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "person.name",
      "message": "should be a string but was a boolean",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() objects validates that the value is actually an object 5`] = `
Object {
  "fixturePath": "PersonQuery/fixture.json",
  "operationName": "PersonQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [],
}
`;

exports[`validate validateFixtureAgainstAST() validates booleans 1`] = `
Object {
  "fixturePath": "MarriedQuery/fixture.json",
  "operationName": "MarriedQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "married",
      "message": "should be a boolean but was a string",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() validates booleans 2`] = `
Object {
  "fixturePath": "MarriedQuery/fixture.json",
  "operationName": "MarriedQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "married",
      "message": "should be non-null but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() validates booleans 3`] = `
Object {
  "fixturePath": "MarriedQuery/fixture.json",
  "operationName": "MarriedQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "married",
      "message": "should be non-null but was null",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() validates booleans 4`] = `
Object {
  "fixturePath": "MarriedQuery/fixture.json",
  "operationName": "MarriedQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [],
}
`;

exports[`validate validateFixtureAgainstAST() validates booleans 5`] = `
Object {
  "fixturePath": "MarriedQuery/fixture.json",
  "operationName": "MarriedQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [],
}
`;

exports[`validate validateFixtureAgainstAST() validates booleans 6`] = `
Object {
  "fixturePath": "RespondedQuery/fixture.json",
  "operationName": "RespondedQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "responded",
      "message": "should be a boolean but was a string",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() validates booleans 7`] = `
Object {
  "fixturePath": "RespondedQuery/fixture.json",
  "operationName": "RespondedQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "responded",
      "message": "should be a boolean (or null), but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() validates booleans 8`] = `
Object {
  "fixturePath": "RespondedQuery/fixture.json",
  "operationName": "RespondedQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [],
}
`;

exports[`validate validateFixtureAgainstAST() validates booleans 9`] = `
Object {
  "fixturePath": "RespondedQuery/fixture.json",
  "operationName": "RespondedQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [],
}
`;

exports[`validate validateFixtureAgainstAST() validates booleans 10`] = `
Object {
  "fixturePath": "RespondedQuery/fixture.json",
  "operationName": "RespondedQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [],
}
`;

exports[`validate validateFixtureAgainstAST() validates enums 1`] = `
Object {
  "fixturePath": "GenerationQuery/fixture.json",
  "operationName": "GenerationQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "generation",
      "message": "should be non-null but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() validates enums 2`] = `
Object {
  "fixturePath": "GenerationQuery/fixture.json",
  "operationName": "GenerationQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "generation",
      "message": "should be non-null but was null",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() validates enums 3`] = `
Object {
  "fixturePath": "GenerationQuery/fixture.json",
  "operationName": "GenerationQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "generation",
      "message": "Value \\"SEVENTH\\" does not exist in \\"Generation\\" enum.",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() validates enums 4`] = `
Object {
  "fixturePath": "GenerationQuery/fixture.json",
  "operationName": "GenerationQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "generation",
      "message": "Enum \\"Generation\\" cannot represent non-string value: true.",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() validates enums 5`] = `
Object {
  "fixturePath": "GenerationQuery/fixture.json",
  "operationName": "GenerationQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [],
}
`;

exports[`validate validateFixtureAgainstAST() validates enums 6`] = `
Object {
  "fixturePath": "GenerationQuery/fixture.json",
  "operationName": "GenerationQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "generation",
      "message": "should be a Generation (or null), but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() validates enums 7`] = `
Object {
  "fixturePath": "GenerationQuery/fixture.json",
  "operationName": "GenerationQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [],
}
`;

exports[`validate validateFixtureAgainstAST() validates enums 8`] = `
Object {
  "fixturePath": "GenerationQuery/fixture.json",
  "operationName": "GenerationQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "generation",
      "message": "Value \\"SEVENTH\\" does not exist in \\"Generation\\" enum.",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() validates enums 9`] = `
Object {
  "fixturePath": "GenerationQuery/fixture.json",
  "operationName": "GenerationQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "generation",
      "message": "Enum \\"Generation\\" cannot represent non-string value: true.",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() validates enums 10`] = `
Object {
  "fixturePath": "GenerationQuery/fixture.json",
  "operationName": "GenerationQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [],
}
`;

exports[`validate validateFixtureAgainstAST() validates mutations 1`] = `
Object {
  "fixturePath": "MyMutation/fixture.json",
  "operationName": "MyMutation",
  "operationPath": undefined,
  "operationType": "mutation",
  "validationErrors": Array [
    Object {
      "keyPath": "haveBirthday",
      "message": "should be non-null but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() validates mutations 2`] = `
Object {
  "fixturePath": "MyMutation/fixture.json",
  "operationName": "MyMutation",
  "operationPath": undefined,
  "operationType": "mutation",
  "validationErrors": Array [
    Object {
      "keyPath": "haveBirthday",
      "message": "should be an object but was a boolean",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() validates mutations 3`] = `
Object {
  "fixturePath": "MyMutation/fixture.json",
  "operationName": "MyMutation",
  "operationPath": undefined,
  "operationType": "mutation",
  "validationErrors": Array [
    Object {
      "keyPath": "haveBirthday.hadFunBirthday",
      "message": "should be a boolean (or null), but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() validates mutations 4`] = `
Object {
  "fixturePath": "MyMutation/fixture.json",
  "operationName": "MyMutation",
  "operationPath": undefined,
  "operationType": "mutation",
  "validationErrors": Array [],
}
`;

exports[`validate validateFixtureAgainstAST() validates mutations 5`] = `
Object {
  "fixturePath": "MyMutation/fixture.json",
  "operationName": "MyMutation",
  "operationPath": undefined,
  "operationType": "mutation",
  "validationErrors": Array [
    Object {
      "keyPath": "haveBirthday.hadFunBirthday",
      "message": "should be a boolean but was a string",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() validates mutations 6`] = `
Object {
  "fixturePath": "MyMutation/fixture.json",
  "operationName": "MyMutation",
  "operationPath": undefined,
  "operationType": "mutation",
  "validationErrors": Array [],
}
`;

exports[`validate validateFixtureAgainstAST() validates mutations 7`] = `
Object {
  "fixturePath": "MyMutation/fixture.json",
  "operationName": "MyMutation",
  "operationPath": undefined,
  "operationType": "mutation",
  "validationErrors": Array [],
}
`;

exports[`validate validateFixtureAgainstAST() validates numbers 1`] = `
Object {
  "fixturePath": "AgeQuery/fixture.json",
  "operationName": "AgeQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "age",
      "message": "should be an integer but was a string",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() validates numbers 2`] = `
Object {
  "fixturePath": "AgeQuery/fixture.json",
  "operationName": "AgeQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "age",
      "message": "should be non-null but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() validates numbers 3`] = `
Object {
  "fixturePath": "AgeQuery/fixture.json",
  "operationName": "AgeQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "age",
      "message": "should be non-null but was null",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() validates numbers 4`] = `
Object {
  "fixturePath": "AgeQuery/fixture.json",
  "operationName": "AgeQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [],
}
`;

exports[`validate validateFixtureAgainstAST() validates numbers 5`] = `
Object {
  "fixturePath": "AgeQuery/fixture.json",
  "operationName": "AgeQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "age",
      "message": "should be an integer but was a float",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() validates numbers 6`] = `
Object {
  "fixturePath": "HeightQuery/fixture.json",
  "operationName": "HeightQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [],
}
`;

exports[`validate validateFixtureAgainstAST() validates numbers 7`] = `
Object {
  "fixturePath": "HeightQuery/fixture.json",
  "operationName": "HeightQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "height",
      "message": "should be a float (or null), but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() validates numbers 8`] = `
Object {
  "fixturePath": "HeightQuery/fixture.json",
  "operationName": "HeightQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [],
}
`;

exports[`validate validateFixtureAgainstAST() validates numbers 9`] = `
Object {
  "fixturePath": "HeightQuery/fixture.json",
  "operationName": "HeightQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [],
}
`;

exports[`validate validateFixtureAgainstAST() validates numbers 10`] = `
Object {
  "fixturePath": "HeightQuery/fixture.json",
  "operationName": "HeightQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [],
}
`;

exports[`validate validateFixtureAgainstAST() validates strings 1`] = `
Object {
  "fixturePath": "NameQuery/fixture.json",
  "operationName": "NameQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "name",
      "message": "should be a string but was a number",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() validates strings 2`] = `
Object {
  "fixturePath": "NameQuery/fixture.json",
  "operationName": "NameQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "name",
      "message": "should be non-null but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() validates strings 3`] = `
Object {
  "fixturePath": "NameQuery/fixture.json",
  "operationName": "NameQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "name",
      "message": "should be non-null but was null",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() validates strings 4`] = `
Object {
  "fixturePath": "NameQuery/fixture.json",
  "operationName": "NameQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [],
}
`;

exports[`validate validateFixtureAgainstAST() validates strings 5`] = `
Object {
  "fixturePath": "AddressQuery/fixture.json",
  "operationName": "AddressQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "address",
      "message": "should be a string but was a number",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() validates strings 6`] = `
Object {
  "fixturePath": "AddressQuery/fixture.json",
  "operationName": "AddressQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "address",
      "message": "should be a string (or null), but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() validates strings 7`] = `
Object {
  "fixturePath": "AddressQuery/fixture.json",
  "operationName": "AddressQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [],
}
`;

exports[`validate validateFixtureAgainstAST() validates strings 8`] = `
Object {
  "fixturePath": "AddressQuery/fixture.json",
  "operationName": "AddressQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [],
}
`;

exports[`validate validateFixtureAgainstAST() works with multiple top-level items 1`] = `
Object {
  "fixturePath": "MyQuery/fixture.json",
  "operationName": "MyQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "name",
      "message": "should be a string but was a number",
    },
    Object {
      "keyPath": "age",
      "message": "should be an integer (or null), but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() works with multiple top-level items 2`] = `
Object {
  "fixturePath": "MyQuery/fixture.json",
  "operationName": "MyQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "name",
      "message": "should be non-null but was undefined",
    },
    Object {
      "keyPath": "age",
      "message": "should be an integer (or null), but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() works with multiple top-level items 3`] = `
Object {
  "fixturePath": "MyQuery/fixture.json",
  "operationName": "MyQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "name",
      "message": "should be non-null but was null",
    },
    Object {
      "keyPath": "age",
      "message": "should be an integer (or null), but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() works with multiple top-level items 4`] = `
Object {
  "fixturePath": "MyQuery/fixture.json",
  "operationName": "MyQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "name",
      "message": "should be non-null but was null",
    },
    Object {
      "keyPath": "age",
      "message": "should be an integer but was a float",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() works with multiple top-level items 5`] = `
Object {
  "fixturePath": "MyQuery/fixture.json",
  "operationName": "MyQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "age",
      "message": "should be an integer (or null), but was undefined",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() works with multiple top-level items 6`] = `
Object {
  "fixturePath": "MyQuery/fixture.json",
  "operationName": "MyQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [],
}
`;

exports[`validate validateFixtureAgainstAST() works with multiple top-level items 7`] = `
Object {
  "fixturePath": "MyQuery/fixture.json",
  "operationName": "MyQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [],
}
`;

exports[`validate validateFixtureAgainstAST() works with multiple top-level items 8`] = `
Object {
  "fixturePath": "MyQuery/fixture.json",
  "operationName": "MyQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "age",
      "message": "should be an integer but was a float",
    },
  ],
}
`;

exports[`validate validateFixtureAgainstAST() works with multiple top-level items 9`] = `
Object {
  "fixturePath": "MyQuery/fixture.json",
  "operationName": "MyQuery",
  "operationPath": undefined,
  "operationType": "query",
  "validationErrors": Array [
    Object {
      "keyPath": "age",
      "message": "should be an integer but was a string",
    },
  ],
}
`;
